CAY-2397 Modeler: Unable to set enum:value as Entity qualifier